syntax = "proto3";

package PayToWin;

import "google/protobuf/empty.proto";

option java_package = "com.paytowin.grpc";

service PayToWin {
  rpc GetPlayers(PlayersRequest) returns (stream PlayersResponse);
  rpc ApplyEffect(EffectRequest) returns (EffectResponse);
}

message PlayersRequest {}

message PlayersResponse {
  repeated string players = 1;
}

message PotionEffect {
  string name = 1;
  uint32 duration = 2;
  uint32 amplifier = 3;
}

message DiamondTool {
  string toolName = 1;
}

enum DatalessEffect {
  RandomPotions = 0;
}

message EffectRequest {
  oneof effect {
    PotionEffect potion = 2;
    DatalessEffect dataless = 3;
    DiamondTool tool = 4;
  }
  string player = 1;
}

message EffectResponse {
  bool success = 1;
}